--- a/Project.toml
+++ b/Project.toml
@@ -1,5 +1,11 @@
 [deps]
+CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
+FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
+GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 GLPK = "60bf3e95-4087-53dc-ae20-288a0d20c6a6"
+ImageCore = "a09fc81d-aa75-5fe9-8630-4744c3626534"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
+MAT = "23992714-dd62-5051-b70f-ba57cb901cac"
+PlotlyJS = "f0f68f2c-4968-5e81-91da-67840de0976a"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
